# OpenGL_Learning

./: .gitignore  CMakeLists.txt  DefaultConfig.cmake  LICENSE  README.md
LearningOpenGL/include/: LearningOpenGLRenderer.h  LearningOpenGLWindow.h
LearningOpenGL/src/: LearningOpenGLRenderer.cpp  LearningOpenGLWindow.cpp
include/: General.h  Include.cmake  Types.h
include/Application/: Application.h
include/Render/: Model.h  Renderer.h  Vertex.h
include/Window/: Window.h
src/: CMakeLists.txt  Src.cmake  main.cpp
src/Application/: Application.cpp
src/Render/: Model.cpp  Renderer.cpp
src/Window/: Window.cpp
